# desafios

./: .gitignore  LICENSE  README.md  pyproject.toml
challenge_DE/: pyproject.toml
challenge_DE/src/: challenge.ipynb  q1_memory.py  q1_time.py  q2_memory.py  q2_time.py  q3_memory.py  q3_time.py
src/: challenge.ipynb  q1_time.py  q2_memory.py  q3_memory.py
