[tool.poetry]
name = "challenge-de"
version = "0.3.2"
description = "Requerimientos para challenge_de LATAM 6/24"
authors = ["Renato Bassi <renato.bassi@sansano.usm.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
seaborn = "^0.13.2"
memory-profiler = "^0.61.0"
emoji = "^2.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
